--- a/src/views/play/menu.module.scss
+++ b/src/views/play/menu.module.scss
@@ -13,6 +13,26 @@
 
     position: relative;
 
+    .loadScreen {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+
+        font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+
+        span {
+            font-size: 20px;
+        }
+    }
+
     .addAccountView {
         position: absolute;
         top: 0;
