feat: Added game handler

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,5 +1,4 @@
 
-
 .btn {
     border: none;
     background: #fff;
@@ -12,6 +11,11 @@
     align-items: center;
 
     cursor: pointer;
+
+    &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+    }
 
     & * {
         cursor: pointer;
